NIFI-15422 Added unit tests for property migration of Processors in standard-bundle (#10787)
Signed-off-by: David Handermann <exceptionfactory@apache.org>