@@ -17,15 +17,19 @@
 package org.apache.nifi.processors.standard;
 
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Map;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -35,9 +39,15 @@ public class TestEvaluateXPath {
     private static final Path XML_SNIPPET_EMBEDDED_DOCTYPE = Paths.get("src/test/resources/TestXml/xml-snippet-embedded-doctype.xml");
     private static final Path XML_SNIPPET_NONEXISTENT_DOCTYPE = Paths.get("src/test/resources/TestXml/xml-snippet-external-doctype.xml");
 
+    private TestRunner testRunner;
+
+    @BeforeEach
+    void setUp() {
+        testRunner = TestRunners.newTestRunner(new EvaluateXPath());
+    }
+
     @Test
     public void testAsAttribute() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_ATTRIBUTE);
         testRunner.setProperty("xpath.result1", "/");
         testRunner.setProperty("xpath.result2", "/*:bundle/node/subNode/value/text()");
@@ -46,14 +56,13 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         out.assertAttributeEquals("xpath.result2", "Hello");
         assertTrue(out.getAttribute("xpath.result1").contains("Hello"));
     }
 
     @Test
     public void testCheckIfElementExists() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_ATTRIBUTE);
         testRunner.setProperty("xpath.result1", "/");
         testRunner.setProperty("xpath.result.exist.1", "boolean(/*:bundle/node)");
@@ -63,7 +72,7 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         assertTrue(out.getAttribute("xpath.result1").contains("Hello"));
         out.assertAttributeEquals("xpath.result.exist.1", "true");
         out.assertAttributeEquals("xpath.result.exist.2", "false");
@@ -71,7 +80,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testUnmatched() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty("xpath.result.exist.2", "/*:bundle/node2");
 
@@ -79,12 +87,11 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_NO_MATCH, 1);
-        testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_NO_MATCH).get(0).assertContentEquals(XML_SNIPPET);
+        testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_NO_MATCH).getFirst().assertContentEquals(XML_SNIPPET);
     }
 
     @Test
     public void testMultipleXPathForContent() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_AUTO);
         testRunner.setProperty("some.property.1", "/*:bundle/node/subNode[1]");
@@ -97,7 +104,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testWriteToContent() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty("some.property", "/*:bundle/node/subNode[1]");
 
@@ -105,7 +111,7 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         final byte[] outData = testRunner.getContentAsByteArray(out);
         final String outXml = new String(outData, StandardCharsets.UTF_8);
         assertTrue(outXml.contains("subNode"));
@@ -114,7 +120,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testFailureIfContentMatchesMultipleNodes() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty("some.property", "/*:bundle/node/subNode");
 
@@ -126,7 +131,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testWriteStringToContent() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_STRING);
         testRunner.setProperty("some.property", "/*:bundle/node/subNode[1]/value/text()");
@@ -135,13 +139,12 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         out.assertContentEquals("Hello");
     }
 
     @Test
     public void testWriteNodeSetToAttribute() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_ATTRIBUTE);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_NODESET);
         testRunner.setProperty("some.property", "/*:bundle/node/subNode[1]");
@@ -150,7 +153,7 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         final String outXml = out.getAttribute("some.property");
         assertTrue(outXml.contains("subNode"));
         assertTrue(outXml.contains("Hello"));
@@ -158,7 +161,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testSuccessForEmbeddedDocTypeValidation() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_STRING);
         testRunner.setProperty(EvaluateXPath.VALIDATE_DTD, "true");
@@ -168,13 +170,12 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_MATCH, 1);
-        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).get(0);
+        final MockFlowFile out = testRunner.getFlowFilesForRelationship(EvaluateXPath.REL_MATCH).getFirst();
         out.assertContentEquals("Hello");
     }
 
     @Test
     public void testFailureForEmbeddedDocTypeValidationDisabled() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_STRING);
         testRunner.setProperty(EvaluateXPath.VALIDATE_DTD, "false");
@@ -188,7 +189,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testFailureForExternalDocTypeWithDocTypeValidationEnabled() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_STRING);
         testRunner.setProperty("some.property", "/*:bundle/node/subNode[1]/value/text()");
@@ -201,7 +201,6 @@ public class TestEvaluateXPath {
 
     @Test
     public void testFailureForExternalDocTypeWithDocTypeValidationDisabled() throws IOException {
-        final TestRunner testRunner = TestRunners.newTestRunner(new EvaluateXPath());
         testRunner.setProperty(EvaluateXPath.DESTINATION, EvaluateXPath.DESTINATION_CONTENT);
         testRunner.setProperty(EvaluateXPath.RETURN_TYPE, EvaluateXPath.RETURN_TYPE_STRING);
         testRunner.setProperty(EvaluateXPath.VALIDATE_DTD, "false");
@@ -211,5 +210,13 @@ public class TestEvaluateXPath {
         testRunner.run();
 
         testRunner.assertAllFlowFilesTransferred(EvaluateXPath.REL_FAILURE, 1);
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.of("Validate DTD", EvaluateXPath.VALIDATE_DTD.getName());
+
+        final PropertyMigrationResult propertyMigrationResult = testRunner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 }
